[package]
name = "deployer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.5", features = ["derive"] }
duct = "0.13.6"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
ssh2 = "0.9.4"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
